tests/rosetta/out/Pascal/cheryls-birthday.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/cheryls-birthday.pas
cheryls-birthday.pas(19,7) Error: Identifier not found "x"
cheryls-birthday.pas(21,9) Error: Identifier not found "x"
cheryls-birthday.pas(32,7) Error: Identifier not found "x"
cheryls-birthday.pas(34,9) Error: Identifier not found "x"
cheryls-birthday.pas(42,7) Error: Identifier not found "x"
cheryls-birthday.pas(44,10) Error: Identifier not found "x"
cheryls-birthday.pas(44,43) Error: Identifier not found "x"
cheryls-birthday.pas(54,166) Error: Incompatible types: got "TArray$1$crc862A1656" expected "TArray$1$crcE41905E8"
cheryls-birthday.pas(63,19) Warning: function result variable of a managed type does not seem to be initialized
cheryls-birthday.pas(145) Fatal: There were 8 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
